test/semantics/programs/valid/match1.fav
x = 1

match x with
  2 -> print("two")
| _ -> print("nope")
