test/semantics/programs/invalid/match-invalid-typed-var.fav
x = "hello"
match x with
1 -> ret " world"
| 2 -> ret " anson"
| 3 -> ret " toal"
| _ -> ret " everyone else"
